# Chess_Engine_Clone

./: .clang-format  CMakeLists.txt
include/: Board.hpp  Position.hpp  magic_bitboards.hpp
src/: Board.cpp  Position.cpp  magic_bitboards.cpp  main.cpp
test/: board_gtest_.cpp
